@@ -50,7 +50,7 @@ end_define
 begin_typedef
 typedef|typedef
 struct|struct
-DECL|struct|__anon2ab521760108
+DECL|struct|__anon2af9f2580108
 block|{
 DECL|member|hscr_policy
 name|GtkPolicyType
@@ -1115,78 +1115,41 @@ argument_list|)
 operator|->
 name|xmin
 expr_stmt|;
+name|gtk_adjustment_configure
+argument_list|(
 name|adj
-operator|->
-name|lower
-operator|=
+argument_list|,
+name|gtk_adjustment_get_value
+argument_list|(
+name|adj
+argument_list|)
+argument_list|,
 literal|0
-expr_stmt|;
-name|adj
-operator|->
-name|upper
-operator|=
+argument_list|,
 name|width
-expr_stmt|;
-name|adj
-operator|->
-name|page_size
-operator|=
+argument_list|,
+literal|1.0
+argument_list|,
+name|MAX
+argument_list|(
 name|GIMP_PREVIEW
 argument_list|(
 name|preview
 argument_list|)
 operator|->
 name|width
-expr_stmt|;
-name|adj
-operator|->
-name|step_increment
-operator|=
-literal|1.0
-expr_stmt|;
-name|adj
-operator|->
-name|page_increment
-operator|=
-name|MAX
-argument_list|(
-name|adj
-operator|->
-name|page_size
 operator|/
 literal|2.0
 argument_list|,
-name|adj
-operator|->
-name|step_increment
+literal|1.0
 argument_list|)
-expr_stmt|;
-name|adj
-operator|->
-name|value
-operator|=
-name|CLAMP
+argument_list|,
+name|GIMP_PREVIEW
 argument_list|(
-name|adj
-operator|->
-name|value
-argument_list|,
-name|adj
-operator|->
-name|lower
-argument_list|,
-name|adj
-operator|->
-name|upper
-operator|-
-name|adj
-operator|->
-name|page_size
+name|preview
 argument_list|)
-expr_stmt|;
-name|gtk_adjustment_changed
-argument_list|(
-name|adj
+operator|->
+name|width
 argument_list|)
 expr_stmt|;
 block|}
@@ -1236,78 +1199,41 @@ argument_list|)
 operator|->
 name|ymin
 expr_stmt|;
+name|gtk_adjustment_configure
+argument_list|(
 name|adj
-operator|->
-name|lower
-operator|=
+argument_list|,
+name|gtk_adjustment_get_value
+argument_list|(
+name|adj
+argument_list|)
+argument_list|,
 literal|0
-expr_stmt|;
-name|adj
-operator|->
-name|upper
-operator|=
+argument_list|,
 name|height
-expr_stmt|;
-name|adj
-operator|->
-name|page_size
-operator|=
+argument_list|,
+literal|1.0
+argument_list|,
+name|MAX
+argument_list|(
 name|GIMP_PREVIEW
 argument_list|(
 name|preview
 argument_list|)
 operator|->
 name|height
-expr_stmt|;
-name|adj
-operator|->
-name|step_increment
-operator|=
-literal|1.0
-expr_stmt|;
-name|adj
-operator|->
-name|page_increment
-operator|=
-name|MAX
-argument_list|(
-name|adj
-operator|->
-name|page_size
 operator|/
 literal|2.0
 argument_list|,
-name|adj
-operator|->
-name|step_increment
+literal|1.0
 argument_list|)
-expr_stmt|;
-name|adj
-operator|->
-name|value
-operator|=
-name|CLAMP
+argument_list|,
+name|GIMP_PREVIEW
 argument_list|(
-name|adj
-operator|->
-name|value
-argument_list|,
-name|adj
-operator|->
-name|lower
-argument_list|,
-name|adj
-operator|->
-name|upper
-operator|-
-name|adj
-operator|->
-name|page_size
+name|preview
 argument_list|)
-expr_stmt|;
-name|gtk_adjustment_changed
-argument_list|(
-name|adj
+operator|->
+name|height
 argument_list|)
 expr_stmt|;
 block|}
@@ -1914,17 +1840,20 @@ name|CLAMP
 argument_list|(
 name|x
 argument_list|,
+name|gtk_adjustment_get_lower
+argument_list|(
 name|hadj
-operator|->
-name|lower
+argument_list|)
 argument_list|,
+name|gtk_adjustment_get_upper
+argument_list|(
 name|hadj
-operator|->
-name|upper
+argument_list|)
 operator|-
+name|gtk_adjustment_get_page_size
+argument_list|(
 name|hadj
-operator|->
-name|page_size
+argument_list|)
 argument_list|)
 expr_stmt|;
 name|y
@@ -1933,17 +1862,20 @@ name|CLAMP
 argument_list|(
 name|y
 argument_list|,
+name|gtk_adjustment_get_lower
+argument_list|(
 name|vadj
-operator|->
-name|lower
+argument_list|)
 argument_list|,
+name|gtk_adjustment_get_upper
+argument_list|(
 name|vadj
-operator|->
-name|upper
+argument_list|)
 operator|-
+name|gtk_adjustment_get_page_size
+argument_list|(
 name|vadj
-operator|->
-name|page_size
+argument_list|)
 argument_list|)
 expr_stmt|;
 if|if
@@ -2156,9 +2088,10 @@ name|GDK_SCROLL_LEFT
 case|:
 name|value
 operator|-=
+name|gtk_adjustment_get_page_increment
+argument_list|(
 name|adj
-operator|->
-name|page_increment
+argument_list|)
 operator|/
 literal|2
 expr_stmt|;
@@ -2171,9 +2104,10 @@ name|GDK_SCROLL_RIGHT
 case|:
 name|value
 operator|+=
+name|gtk_adjustment_get_page_increment
+argument_list|(
 name|adj
-operator|->
-name|page_increment
+argument_list|)
 operator|/
 literal|2
 expr_stmt|;
@@ -2187,17 +2121,20 @@ name|CLAMP
 argument_list|(
 name|value
 argument_list|,
+name|gtk_adjustment_get_lower
+argument_list|(
 name|adj
-operator|->
-name|lower
+argument_list|)
 argument_list|,
+name|gtk_adjustment_get_upper
+argument_list|(
 name|adj
-operator|->
-name|upper
+argument_list|)
 operator|-
+name|gtk_adjustment_get_page_size
+argument_list|(
 name|adj
-operator|->
-name|page_size
+argument_list|)
 argument_list|)
 argument_list|)
 expr_stmt|;
@@ -2240,9 +2177,10 @@ name|preview
 operator|->
 name|xoff
 operator|=
+name|gtk_adjustment_get_value
+argument_list|(
 name|hadj
-operator|->
-name|value
+argument_list|)
 expr_stmt|;
 name|gimp_preview_area_set_offsets
 argument_list|(
@@ -2318,9 +2256,10 @@ name|preview
 operator|->
 name|yoff
 operator|=
+name|gtk_adjustment_get_value
+argument_list|(
 name|vadj
-operator|->
-name|value
+argument_list|)
 expr_stmt|;
 name|gimp_preview_area_set_offsets
 argument_list|(
@@ -2669,26 +2608,32 @@ expr_stmt|;
 name|h
 operator|=
 operator|(
+operator|(
+name|gtk_adjustment_get_value
+argument_list|(
 name|adj
-operator|->
-name|value
+argument_list|)
 operator|/
+name|gtk_adjustment_get_upper
+argument_list|(
 name|adj
-operator|->
-name|upper
+argument_list|)
 operator|)
 operator|+
 operator|(
+name|gtk_adjustment_get_page_size
+argument_list|(
 name|adj
-operator|->
-name|page_size
+argument_list|)
 operator|/
+name|gtk_adjustment_get_upper
+argument_list|(
 name|adj
-operator|->
-name|upper
+argument_list|)
 operator|)
 operator|/
 literal|2.0
+operator|)
 expr_stmt|;
 name|adj
 operator|=
@@ -2705,26 +2650,32 @@ expr_stmt|;
 name|v
 operator|=
 operator|(
+operator|(
+name|gtk_adjustment_get_value
+argument_list|(
 name|adj
-operator|->
-name|value
+argument_list|)
 operator|/
+name|gtk_adjustment_get_upper
+argument_list|(
 name|adj
-operator|->
-name|upper
+argument_list|)
 operator|)
 operator|+
 operator|(
+name|gtk_adjustment_get_page_size
+argument_list|(
 name|adj
-operator|->
-name|page_size
+argument_list|)
 operator|/
+name|gtk_adjustment_get_upper
+argument_list|(
 name|adj
-operator|->
-name|upper
+argument_list|)
 operator|)
 operator|/
 literal|2.0
+operator|)
 expr_stmt|;
 name|x
 operator|+=
@@ -3005,13 +2956,15 @@ operator|=
 name|cx
 operator|*
 operator|(
+name|gtk_adjustment_get_upper
+argument_list|(
 name|hadj
-operator|->
-name|upper
+argument_list|)
 operator|-
+name|gtk_adjustment_get_lower
+argument_list|(
 name|hadj
-operator|->
-name|lower
+argument_list|)
 operator|)
 operator|/
 name|widget
@@ -3025,13 +2978,15 @@ operator|=
 name|cy
 operator|*
 operator|(
+name|gtk_adjustment_get_upper
+argument_list|(
 name|vadj
-operator|->
-name|upper
+argument_list|)
 operator|-
+name|gtk_adjustment_get_lower
+argument_list|(
 name|vadj
-operator|->
-name|lower
+argument_list|)
 operator|)
 operator|/
 name|widget
@@ -3042,27 +2997,35 @@ name|height
 expr_stmt|;
 name|x
 operator|+=
+operator|(
+name|gtk_adjustment_get_lower
+argument_list|(
 name|hadj
-operator|->
-name|lower
+argument_list|)
 operator|-
+name|gtk_adjustment_get_page_size
+argument_list|(
 name|hadj
-operator|->
-name|page_size
+argument_list|)
 operator|/
 literal|2
+operator|)
 expr_stmt|;
 name|y
 operator|+=
+operator|(
+name|gtk_adjustment_get_lower
+argument_list|(
 name|vadj
-operator|->
-name|lower
+argument_list|)
 operator|-
+name|gtk_adjustment_get_page_size
+argument_list|(
 name|vadj
-operator|->
-name|page_size
+argument_list|)
 operator|/
 literal|2
+operator|)
 expr_stmt|;
 name|gtk_adjustment_set_value
 argument_list|(
@@ -3072,17 +3035,20 @@ name|CLAMP
 argument_list|(
 name|x
 argument_list|,
+name|gtk_adjustment_get_lower
+argument_list|(
 name|hadj
-operator|->
-name|lower
+argument_list|)
 argument_list|,
+name|gtk_adjustment_get_upper
+argument_list|(
 name|hadj
-operator|->
-name|upper
+argument_list|)
 operator|-
+name|gtk_adjustment_get_page_size
+argument_list|(
 name|hadj
-operator|->
-name|page_size
+argument_list|)
 argument_list|)
 argument_list|)
 expr_stmt|;
@@ -3094,17 +3060,20 @@ name|CLAMP
 argument_list|(
 name|y
 argument_list|,
+name|gtk_adjustment_get_lower
+argument_list|(
 name|vadj
-operator|->
-name|lower
+argument_list|)
 argument_list|,
+name|gtk_adjustment_get_upper
+argument_list|(
 name|vadj
-operator|->
-name|upper
+argument_list|)
 operator|-
+name|gtk_adjustment_get_page_size
+argument_list|(
 name|vadj
-operator|->
-name|page_size
+argument_list|)
 argument_list|)
 argument_list|)
 expr_stmt|;
@@ -3190,34 +3159,44 @@ argument_list|)
 expr_stmt|;
 name|x
 operator|=
+operator|(
+name|gtk_adjustment_get_value
+argument_list|(
 name|adj
-operator|->
-name|value
+argument_list|)
 operator|/
 operator|(
+name|gtk_adjustment_get_upper
+argument_list|(
 name|adj
-operator|->
-name|upper
+argument_list|)
 operator|-
+name|gtk_adjustment_get_lower
+argument_list|(
 name|adj
-operator|->
-name|lower
+argument_list|)
+operator|)
 operator|)
 expr_stmt|;
 name|w
 operator|=
+operator|(
+name|gtk_adjustment_get_page_size
+argument_list|(
 name|adj
-operator|->
-name|page_size
+argument_list|)
 operator|/
 operator|(
+name|gtk_adjustment_get_upper
+argument_list|(
 name|adj
-operator|->
-name|upper
+argument_list|)
 operator|-
+name|gtk_adjustment_get_lower
+argument_list|(
 name|adj
-operator|->
-name|lower
+argument_list|)
+operator|)
 operator|)
 expr_stmt|;
 name|adj
@@ -3234,34 +3213,44 @@ argument_list|)
 expr_stmt|;
 name|y
 operator|=
+operator|(
+name|gtk_adjustment_get_value
+argument_list|(
 name|adj
-operator|->
-name|value
+argument_list|)
 operator|/
 operator|(
+name|gtk_adjustment_get_upper
+argument_list|(
 name|adj
-operator|->
-name|upper
+argument_list|)
 operator|-
+name|gtk_adjustment_get_lower
+argument_list|(
 name|adj
-operator|->
-name|lower
+argument_list|)
+operator|)
 operator|)
 expr_stmt|;
 name|h
 operator|=
+operator|(
+name|gtk_adjustment_get_page_size
+argument_list|(
 name|adj
-operator|->
-name|page_size
+argument_list|)
 operator|/
 operator|(
+name|gtk_adjustment_get_upper
+argument_list|(
 name|adj
-operator|->
-name|upper
+argument_list|)
 operator|-
+name|gtk_adjustment_get_lower
+argument_list|(
 name|adj
-operator|->
-name|lower
+argument_list|)
+operator|)
 operator|)
 expr_stmt|;
 if|if
